fix wrong margins

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -24,5 +24,5 @@
   min-height: 100vh;
 
   /* TODO: Уточнить! */
-  min-width: 350px;
+  min-width: 1151px;
 }
